2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroupElement.php:  It shouldn't be allowed to create a new content element in isolation.  Unfortunately the UI allows if for now.  Such content will now be deleted.
	* Locale:  Fix string selection algorithm to pick the right language.
	* Content:  Implement display logging.
	
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* stylesheet rework
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Fixed wrong location for change password link
2005-04-25 François Proulx <francois.proulx@gmail.com>
	* Portal page styling
	
2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Previous fix didn't work.  New fix.

2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Make bad selection mode eror non-fatal.
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix bug in ContentGroup enumeration

2005-04-25 François Proulx <francois.proulx@gmail.com>
	* More stylesheets work
	
2005-04-25 François Proulx <francois.proulx@gmail.com>
	* Much better stylesheet
		
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* UI fully functionnal

2005-04-25 François Proulx <francois.proulx@gmail.com
	* More interface work
2005-04-25 François Proulx <francois.proulx@gmail.com
	* Completed integration of new interface with new objects
	
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Integration merge, should work, but there will be display problems everywhere.  Expect further commits today.
	* Almost 100% complete Network abstraction
	* Much better object encapsulation.  Deprecated methods not removed yet.
	* Add MainUI class.  Used to display the interface.  Inner workings still need work.
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Added Preferred Size support for Flickr pictures
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Completed missing translations
	
2005-04-23 François Proulx <francois.proulx@gmail.com>